# blog.siddhantsharma.me

./: .gitignore  .vercelignore  404.html  README.md  blogify.py  convert.py  index.html  prism.css  pyproject.toml  styles.css
converter/: __init__.py  __main__.py  common.py  post.py  travel.py
notes/2023-07-16/: gasper.html  gasper.md
notes/2023-07-17/: gasper.html  gasper.md
notes/2024-05-25/: epf-technical-writeup.html  epf-technical-writeup.md
posts/2023-07-16/: weld.html
posts/2023-08-19/: converted.html  weld.html  weld.md
posts/2023-08-24/: weld.html  weld.md
posts/2023-08-26/: learning-media.html  randomly-walking-through-learning.html  randomly-walking-through-learning.md  taare-zameen-par.md
posts/2024-06-04/: graduation-thoughts.html  graduation-thoughts.md
posts/2025-01-19/: unifying-theory.md
posts/2025-11-24/: what-if-attention-mattered-less.html  what-if-attention-mattered-less.md
travel/: bali-2026.md  croatia-2024.md  iceland-2024.md  index.html  kyoto-2024.md  marrakech-2025.md  patagonia-2023.md
