[project]
name = "blog-converter"
version = "0.1.0"
description = "Markdown to HTML blog converter with YAML frontmatter support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
blog-convert = "convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["convert.py"]

[dependency-groups]
dev = []
